@@ -112,6 +112,8 @@ New in spot 2.5.3.dev  (not yet released)
   - The HOA parser will now accept Alias: declarations that occur
     before AP:.
 
+  - the option --allow-dups of randltl now works properly
+
 New in spot 2.5.3 (2018-04-20)
 
   Bugs fixed:
